tdf#94687: Keep original ordering of overall initialization steps

...between ScGridWindow::CreateAccessible, ScAccessibleDocument ctor, and
ScAccessibleDocument::Init, by introducing ScAccessibleDocument::PreInit into
which the this-using parts of the ScAccessibleDocument ctor are offloaded now.

This is a follow-up to 6f1e77fc600f776433a759172323b4afec3d811e, "rhbz#1264753:
Avoid this being release()ed to 0 in ScAccessibleDocument ctor;" turns out my
fears that the slight re-ordering of initialization code coulb break something
were well-founded after all.

Change-Id: Ibf62983030d7abbe4b1ead9ee5add5f9627e7d60